--- a/WebApp/WebUI/templates/upload.html
+++ b/WebApp/WebUI/templates/upload.html
@@ -1,5 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
-    <button type="submit">Upload</button>
+    <button type="submit" class="btn btn-primary">Upload</button>
 </form>
+{% endblock %}
