--- a/WebApp/WebUI/templates/base.html
+++ b/WebApp/WebUI/templates/base.html
@@ -23,7 +23,10 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Document Viwer</a>
+                <a class="nav-link" href="{% url 'document_viewer' %}">Document Viwer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Document Chat</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
