--- a/WebApp/WebUI/templates/document_viewer.html
+++ b/WebApp/WebUI/templates/document_viewer.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>PDF Viewer with Toggleable Sidebar</title>
     <style>
         body, html {
@@ -41,7 +41,7 @@
             padding: 10px;
         }
         #chat-container {
-            width: 20%; /* fixed width for the chat container */
+            width: 200%; /* fixed width for the chat container */
             background-color: #f0f0f0;
             overflow-y: auto;
             padding: 10px;
@@ -68,7 +68,10 @@
         </div>
 
         <div id="chat-container">
-            <!-- Chat interface goes here -->
+            <iframe src="http://localhost:8501" width="100%" class="chatIframe"></iframe>
+            <script type="text/javascript" language="javascript"> 
+                $('.chatIframe').css('height', $(window).height()+'px');
+                </script>
         </div>
     </div>
 
