--- a/WebApp/WebUI/templates/pdf_viewer.html
+++ b/WebApp/WebUI/templates/pdf_viewer.html
@@ -12,6 +12,15 @@
             margin-bottom: 1em;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
+    .textLayer {
+            position: absolute;
+            left: 0;
+            top: 0;
+            color: transparent;
+            overflow: hidden;
+            pointer-events: none;
+            font-family: sans-serif;
+        }
     </style>
 </head>
 <body>
