--- a/WebApp/WebUI/templates/tabs.html
+++ b/WebApp/WebUI/templates/tabs.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="{% url 'search' %}">Document Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Document Chat</a>
+            <a class="nav-link" href="{% url 'chat' %}">Document Chat</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
